--- a/3212/deploy/k8s/deployment.yaml
+++ b/3212/deploy/k8s/deployment.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
         - name: api-tester-3212
           # 1pro는 본인의 dockerhub username으로 변경해 주세요.
-          image: 1pro/api-tester:3.0.0
+          image: jimineutron/api-tester:3.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -52,8 +52,9 @@ spec:
             httpGet:
               path: "/startup"
               port: 8080
-            periodSeconds: 5
-            failureThreshold: 24
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 60
           readinessProbe:
             httpGet:
               path: "/readiness"
