--- a/3212/deploy/k8s/deployment.yaml
+++ b/3212/deploy/k8s/deployment.yaml
@@ -52,6 +52,7 @@ spec:
             httpGet:
               path: "/startup"
               port: 8080
+            timeoutSeconds: 5
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 60
@@ -59,12 +60,14 @@ spec:
             httpGet:
               path: "/readiness"
               port: 8080
+            timeoutSeconds: 5
             periodSeconds: 10
             failureThreshold: 3
           livenessProbe:
             httpGet:
               path: "/liveness"
               port: 8080
+            timeoutSeconds: 5
             periodSeconds: 10
             failureThreshold: 3
           resources:
