--- a/3222/deploy/k8s/portal/deployment.yaml
+++ b/3222/deploy/k8s/portal/deployment.yaml
@@ -44,6 +44,7 @@ spec:
             httpGet:
               path: "/startup"
               port: 8080
+            timeoutSeconds: 5
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 60
