--- a/3222/deploy/k8s/core/deployment.yaml
+++ b/3222/deploy/k8s/core/deployment.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
         - name: core-3222
           # 1pro는 본인의 dockerhub username으로 변경해 주세요.
-          image: 1pro/api-tester:3.0.0
+          image: jimineutron/api-tester:3.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -44,6 +44,7 @@ spec:
             httpGet:
               path: "/startup"
               port: 8080
+            timeoutSeconds: 5
             initialDelaySeconds: 30
             periodSeconds: 10
             failureThreshold: 60
