--- a/3231/deploy/k8s/block/statefulset.yaml
+++ b/3231/deploy/k8s/block/statefulset.yaml
@@ -41,18 +41,22 @@ spec:
             httpGet:
               path: "/startup"
               port: 8080
-            periodSeconds: 5
-            failureThreshold: 24
+            timeoutSeconds: 5
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 60
           readinessProbe:
             httpGet:
               path: "/readiness"
               port: 8080
+            timeoutSeconds: 5
             periodSeconds: 10
             failureThreshold: 3
           livenessProbe:
             httpGet:
               path: "/liveness"
               port: 8080
+            timeoutSeconds: 5
             periodSeconds: 10
             failureThreshold: 3
           volumeMounts:
